fix(fruntier/repository/RecommendRouteFileRepository) : fix error about storing recommendRoute instance into RecommendRoute.txt file